work variant with out correcty roles

--- a/src/main/resources/templates/showuser.html
+++ b/src/main/resources/templates/showuser.html
@@ -19,7 +19,7 @@
         <a class="nav-item" style="color: white" th:utext="${user.getRoles()}">name</a> <!-- ПЕРЕНЕСТИ В ЛЕВУЮ ЧАСТЬ !!!-->
         <ul class="nav nav-pills">
             <li class="nav-item">
-                <a type="submit" class="btn btn-primary" th:href="@{/logout}">Logout</a>
+                <a type="submit" class="btn btn-primary" th:href="@{/login}">Logout</a>
             </li>
         </ul>
     </nav>
