--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
     <a class="navbar-brand" style="color: white" th:utext="${user.getRoles()}">name</a>
     <ul class="nav nav-pills">
         <li class="nav-item">
-            <a type="submit" class="btn btn-primary" th:href="@{/logout}">Logout</a>
+            <a type="submit" class="btn btn-primary" th:href="@{/login}">Logout</a>
         </li>
     </ul>
 </nav>
@@ -41,7 +41,7 @@
     <div class="col-10" id="adminPanel" data-spy="scroll" data-target="#v-pills-tabContent">
         <div class="tab-content" id="v-pills-tabContent">
             <!--Admin panel-->
-            <div>
+            <div id="change-tabContent">
                 <br>
                 <h1>Admin Panel</h1>
                 <br>
@@ -64,7 +64,7 @@
                     <div class="tab-pane fade show active" id="usersTable" role="tabpanel"
                          aria-labelledby="usersTable-tab">
                         <div class="card">
-                            <div class="card-header font-weight-bold">All users</div>
+                            <div class="card-header font-weight-bold" style="font-size: 20px" >All users</div>
                             <div id="all-users-table">
                                 <table class="table table-striped">
                                     <thead>
@@ -89,18 +89,27 @@
                     <div class="tab-pane fade" id="newUser" role="tabpanel" aria-labelledby="newUser-tab">
                         <div class="card">
                             <div class="card-header font-weight-bold" style="font-size: 20px">Add new user</div>
-                            <form class="form-horizontal text-center mx-auto font-weight-bold" id="new-form">
+                            <form class="form-horizontal mx-auto font-weight-bold" id="new-form">
+                                <!-- Username -->
                                 <div class="form-group">
                                     <label for="usernameInputNew">Username</label>
                                     <input type="text" class="form-control" id="usernameInputNew">
                                 </div>
+                                <!-- Password -->
                                 <div class="form-group">
                                     <label for="passwordInputNew">Password</label>
                                     <input type="password" class="form-control" id="passwordInputNew">
                                 </div>
-                                <div class="form-group">
-                                    <label for="rolesInputNew">Role</label>
-                                    <select class="form-control" id="rolesInputNew" multiple="multiple"></select>
+                                <!-- Roles -->
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" name="roleUser"
+                                           id="roleUserInputNew"
+                                           value="ROLE_USER"> User
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" name="roleAdmin"
+                                           id="roleAdminInputNew"
+                                           value="ROLE_ADMIN"> Admin
                                 </div>
                                 <button class="btn btn-success" type="button" id="buttonInputNewSubmit">Add new
                                     user
@@ -205,14 +214,35 @@
                 <!--^^Modal Delete form^^-->
             </div>
             <!--^^Admin panel^^-->
-            <div>
-
-                <!-- должна быть юзер панель-->
-
+            <!--User panel-->
+            <div class="tab-pane fade" id="v-pills-user" role="tabpanel" aria-labelledby="v-pills-user-tab">
+                <br>
+                <h1>User information-page</h1>
+                <br>
+                <div class="card">
+                    <div class="card-header font-weight-bold">About user</div>
+                    <div id="current-user-table">
+                        <table class="table table-striped">
+                            <thead>
+                            <tr>
+                                <th scope="col">ID</th>
+                                <th scope="col">Username</th>
+                                <th scope="col">Password</th>
+                                <th scope="col">Roles</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <!--                            JS table-->
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
+            <!--^^User panel^^-->
         </div>
     </div>
-    <!--^^Правая боковая панель^^-->
+</div>
+<!--^^Правая боковая панель^^-->
 </div>
 <!--^^Главный блок^^-->
 
